@@ -15,5 +15,9 @@ Jon Bagshaw
     Working with Stefan on Lacandon Conquest
 Tom Alsen (aka Tzarg)
     Implementation of the FIND ALL order
+Ben Lloyd
+    Bugfixes and suggestions.
+Georg Gottschalk
+	Bugfixes and suggestions and lots of ideas for Ceran.
 Joseph Traub
     Changes, updates, and merging a few disparate branches
